--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,8 @@
   --cor-fonte-principal: #041833;
   --cor-fonte-post: #444444;
   --branco: #FFF;
-  --fonte-principal: 'Raleway', sans-serif;
-  --fonte-secundaria: 'Playfair Display', sans-serif;
+  --fonte-principal: "Roboto", sans-serif;
+  --fonte-secundaria: "Anton SC", sans-serif;
 
   font-family: var(--fonte-principal);
 }
